# SIST_CABANAS_MVP

./: .editorconfig  .env.template  .gitattributes  .gitignore  .pre-commit-config.yaml  00_INDICE_MAESTRO.txt  ACTIVATION_GUIDE.md  ADMIN_PLAYBOOK.md  ANALISIS_UX_ADMINISTRADOR_PROFUNDO.md  ANALYSIS_INDEX.md  ANALYSIS_README.md  ANALYSIS_SUMMARY.md  AUDITORIA_TECNICA_COMPLETA.md  BLUEPRINT_FINALIZACION_MVP.md  CHANGELOG.md  CIERRE_EJECUTIVO_FASE2.md  CIERRE_JORNADA_2025-10-04.md  CIERRE_JORNADA_2025-10-09.md  CIERRE_SESION_2025-10-02.md  CLEANUP_SUMMARY.md  CODE_OF_CONDUCT.md  COMMIT_PENDING.md  CONTINUAR_MAÑANA.txt  CONTRIBUTING.md  CORRECCIONES_TERMINOLOGIA_2025-10-10.md  CREDENCIALES_RESUMEN_EJECUTIVO.md  CREDENCIALES_TODO_NECESARIO.md  DASHBOARD_FINAL_SUMMARY.md  DELIVERABLES.txt  DEPLOYMENT.md  DEPLOYMENT_READY.md  DEPLOY_DASHBOARD_GUIDE.md  DEPLOY_FAST_TRACK.md  DEPLOY_READY_CHECKLIST.md  DIAGNOSTICO_Y_ROADMAP_DESPLIEGUE.md  DOCUMENTATION_INDEX.md  ESTADO_ACTUAL.md  ESTADO_ACTUAL_2025-10-10.md  ESTADO_ACTUAL_VALIDADO_2025-11-03.md  ESTADO_FINAL_MVP.md  (+101 more)
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: archive-repo.yml  ci-lint.yml  ci-tests.yml  ci.yml  consolidation-nag.yml  deploy-fly.yml  deploy-staging.yml  security-scan.yml  sync-docs.yml
.memory/: todo_meta.json
backend/: .env.template  CHANGELOG.md  DEPLOY_CHECKLIST.md  DEPLOY_TUNING.md  Dockerfile  README.md  ROADMAP_BCD.md  alembic.ini  create_test_data.py  deploy.sh  docker-compose.test.yml  docker-compose.yml  generate_nginx_conf.sh  init-db.sql  init-test-auth.sql  nginx.conf  nginx.conf.backup  nginx.conf.dev  nginx.conf.template  requirements.txt  security_audit.md  start-fly.sh  start-railway.sh  start.sh  test_e2e.py  test_fallback.db  test_redis_connection.py  test_reservation_flow.py
backend/alembic/: env.py
backend/app/: main.py  metrics.py  test_redis_docker.py  test_redis_locks.py
backend/docs/: AUDITORIA_2025-09-27.md  BLUEPRINT_DESPLIEGUE.md  DEPLOYMENT_SUMMARY.md
backend/scripts/: concurrency_overlap_test.py  deployment_dashboard.py  generate_deployment_summary.py  init_db.py  runtime_benchmark.py  seed.py  seed_data.py  seed_test_data.py  smoke.sh  validate_predeploy.py
backend/tests/: E2E_QUICK_FIX.md  conftest.py  test_admin_dashboard_stats.py  test_agent_consistency.py  test_audio_transcription.py  test_auth_authz.py  test_background_jobs.py  test_circuit_breaker.py  test_confirm_concurrency.py  test_constraint_validation.py  test_conversation_state.py  test_double_booking.py  test_e2e_flows.py  test_email_service.py  test_expiration_job.py  test_health.py  test_health_checks.py  test_health_degraded_unhealthy.py  test_nlu.py  (+30 more)
database/: extensions.sql  init.sql
devtools/: mock_gh.sh  simulate_archive_step.sh
docs/: API_REFERENCE.md  CONSOLIDATION_STATUS.md  DAILY_LOG_2025-09-24.md  FASE3_RESUMEN.md  GRAFANA_DASHBOARDS.md  INDEX.md  INDEX.md.old  LIVING_DOCS.md  OPCIONES_A_B_COMPLETADAS.md  OPCION_C_COMPLETADA.md  PERFORMANCE_VALIDATION_RESULTS.md  RAILWAY_SETUP.md  README.md  SECURITY_CRITICAL_STATUS.md  TODAS_LAS_OPCIONES_COMPLETADAS.md  TROUBLESHOOTING.md  cleanup-placeholder.md
monitoring/: README.md  docker-compose.yml  prometheus.yml
nginx/: nginx.conf
ops/: BLUEPRINT_CHECKLIST_100_PORCIENTO.md  BLUEPRINT_CHECKLIST_OPTIMIZACION_UX.md  DEPLOYMENT_DECISION_MAP.md  DISASTER_RECOVERY.md  FLY_DEPLOY_CHECKLIST.md  FLY_SECRETS_MATRIX.md  GET_DB_URLS_GUIDE.md  GO_NO_GO_CHECKLIST.md  GUIA_OBTENER_SECRETOS_PASO_A_PASO.md  INCIDENT_RESPONSE_RUNBOOK.md  PLAN_COMPLETO_FLYIO_UX_ADMIN.md  PROD_READINESS_CHECKLIST.md  SMOKE_TESTS.md  STAGING_BENCHMARK_PLAN.md  STAGING_DEPLOYMENT_PLAYBOOK.md  STAGING_DEPLOYMENT_QUICK_START.md  UX_MASTER_PLAN_ADMIN_GUEST.md  deploy-check.sh  fast-track-deploy.sh  set_fly_secrets.sh  smoke-tests.sh  smoke_and_benchmark.sh  staging-deploy-interactive.sh
reports/: audit_20251014_051553_structure.txt  audit_20251014_051553_system_info.txt
scripts/: README.md  configure_ical.py  configure_whatsapp.py  deploy.sh  deploy_quick.sh  generate-secrets.sh  generate_production_secrets.sh  monitor_system.py  post-deploy-verify.sh  pre-deploy-check.sh  production-checklist.sh  quick_validation.sh  server-setup.sh  setup_mercadopago_quick.sh  setup_ssl.sh  setup_whatsapp_quick.sh  smoke-test-prod.sh  test-ci-local.sh  test-double-booking-prod.py  test_e2e_complete.sh
tools/: analyze_queries.py  audit.sh  create_perf_indexes.sh  load_test_suite.py  profile_performance.py  summarize_vulns.py
(+196 files in other folders)
